@@ -22,6 +22,7 @@ Card Maker Version History
 - Added repeat functionality for repetition when translating
 - Added ![elementname] translator
 - Added %[x,#,#] substring translator
+- Added better handling of fonts that do not have a "Regular" style
 
 1.0.0.0
 - Added limit to the number of loops of translation within Incept (should protect against typos)
